# morghulis

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  flake.nix  justfile  makefile  meson.build  mpris.patch  uncrustify.cfg  vala-lint.conf
.github/workflows/: build_and_release.yml  test.yml
.pkgs/git/: .gitignore  PKGBUILD
data/: com.github.ARKye03.zoore_layer.gresource.xml  meson.build  morghulis.gresource.xml
data/scss/: _Colors.scss  _Mpris.scss  _QuickSettings.scss  _Runner.scss  _StatusBar.scss  _adw.scss  main.scss  meson.build
data/ui/: Mpris.blp  NavBar.blp  QuickSettings.blp  QuickSettingsButton.blp  Runner.blp  RunnerButton.blp  StatusBar.blp
scripts/: genVersion.sh
src/: App.vala  Daemon.vala  Mpris.vala  NavBar.vala  QuickSettings.vala  QuickSettingsButton.vala  Runner.vala  RunnerButton.vala  StatusBar.vala  main.vala  meson.build
src/Utils/: Layer.vala
src/styles/: main.scss  style.css
src/ui/: NavBarWidget.vala
